Add log in and sign up

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,34 @@
 </head>
 <body>
 <div class="container">
+  <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <span class="navbar-brand">
+            <strong>PhotoBlog</strong>
+          </span>
+          <span class="navbar-brand">
+            <% if @current_user %>
+              Hello, <%= @current_user.username %>
+            <% end %>
+          </span>
+          <ul class="nav navbar-nav">
+            
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <% if @current_user %>
+            <li>
+              <%= link_to "Log Out", sign_out_path, method: :delete %>
+            </li>
+            <% end %>
+          </ul>
+        </div>
+      </nav>
+      <% if alert %>
+        <div class="alert"><%= alert %></div>
+      <% end %>
+      <% if notice %>
+        <div class="notice"><%= notice %></div>
+      <% end %>
   <%= yield %>
 </div>
 
